feat: modify gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 
-./resources/private.pem
-./resources/public.pem
+/src/main/resources/private.pem
+/src/main/resources/public.pem
